Change the plugin display name and description
This patch prettifies the plugin display name and the description of the
plugin. Now it contains less tautological information and describes
the purpose of the plugin to simplify writing the Tarantool apps.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tarantool",
-  "displayName": "Tarantool VSCode extension",
-  "description": "Tarantool VSCode extension.",
+  "displayName": "Tarantool",
+  "description": "Develop Tarantool applications with ease",
   "version": "0.0.1",
   "icon": "res/icon.png",
   "repository": {
