--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,27 @@ on:
   pull_request:
 
 jobs:
-  build:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Spell Check Repo
+      uses: crate-ci/typos@master
+    - name: Setup node 20.x
+      uses: actions/setup-node@v3
+      with:
+          node-version: 20.x
+    - name: Install dependencies
+      run: npm ci
+    - name: Lint
+      run: npm run lint
 
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [lint]
     steps:
     - uses: actions/checkout@v4
       with:
@@ -21,10 +39,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
           node-version: 20.x
-    - name: Build
-      run: npm i
-    - name: Lint
-      run: npm run lint
+    - name: Install dependencies
+      run: npm ci
     - name: Package
       run: npx vsce package -o tarantool-vscode.vsix
     - name: Upload
@@ -34,6 +50,7 @@ jobs:
         path: ${{ github.workspace }}/tarantool-vscode.vsix
 
   publish:
+    name: Publish
     runs-on: ubuntu-latest
     needs: [build]
     if: success() && startsWith(github.ref, 'refs/tags/')
