--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "linter",
     "snippets"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:lua"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -89,6 +91,7 @@
   "devDependencies": {
     "@octokit/core": "^5",
     "@types/command-exists": "^1.2.3",
+    "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.88.0",
@@ -99,6 +102,7 @@
     "command-exists": "^1.2.9",
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.23.0",
+    "lodash": "^4.17.21",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
