--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
       "title": "Tarantool",
       "properties": {
         "tarantool.ttPath": {
-           "type": "string",
-           "default": "tt",
-           "markdownDescription": "Specifies a path to the TT executable, defaults to the one available in the `$PATH`."
+          "type": "string",
+          "default": "tt",
+          "markdownDescription": "Specifies a path to the TT executable, defaults to the one available in the `$PATH`."
         }
       }
     }
@@ -104,6 +104,7 @@
     "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/semver": "^7.7.0",
     "@types/vscode": "^1.88.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
@@ -113,6 +114,7 @@
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^9.23.0",
     "lodash": "^4.17.21",
+    "semver": "^7.7.2",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
