Add Tarantool debugging facilities
This patch introduces basic Tarantool debugging facilities into the
extension. Basically it is done using EmmyLuaDebugger [^1].

Set up the debugger using the following instructions.

* Insert debugger code in Tarantool application by pressing
  `Ctrl+Shift+P` (or `Cmd+Shift+P` on MacOS) and running `Tarantool:
  Insert debugger code` command.
* Start single Tarantool instance.
* Press `F5` or run `Debug: Start debugging` command by pressing
  `Ctrl+Shift+P` (or `Cmd+Shift+P` on MacOS).
* Choose `EmmyLua New Debugger` in the list. This debugging
  configuration would run automatically from now.
* Set up breakpoints & access the Tarantool instance through `Debug
  console` in the bottom panel.

These features are supported.

* Breakpoints.
* Step-by-step execution within the fiber.
* Multiple files support.
* Interacting with the local variables, console at the debug mode.

Needs https://github.com/EmmyLua/EmmyLuaDebugger/pull/75 to be tested
on MacOS on arm64.

Closes #19

[^1] https://github.com/EmmyLua/EmmyLuaDebugger/pull/75

--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
       {
         "command": "tarantool.install-ce",
         "title": "Tarantool: Install Tarantool Community Edition (tt)"
+      },
+      {
+        "command": "tarantool.debugger-code",
+        "title": "Tarantool: Insert debugger code"
       }
     ],
     "yamlValidation": [
