--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
+debugger/*.dylib filter=lfs diff=lfs merge=lfs -text
+debugger/*.so filter=lfs diff=lfs merge=lfs -text
